hphp/hack/test/typecheck/argument_unpacking/tuple_unpacking_typechecked6.php.exp
File "tuple_unpacking_typechecked6.php", line 8, characters 11-15:
Invalid argument (Typing[4110])
File "tuple_unpacking_typechecked6.php", line 3, characters 39-44:
Expected string
File "tuple_unpacking_typechecked6.php", line 6, characters 22-22:
But got int
